# raptor_data_simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  apply_taxsbp.cpp  benchmark.sh  count_minimiser.cpp  dream_yara.sh  generate_local_matches.cpp  generate_reads.cpp  generate_reads_refseq.cpp  original_dream_yara.sh  split_sequence.cpp
src/evaluation_scripts/: eval_yara.py
test/: CMakeLists.txt
